tests/baselines/reference/importAndVariableDeclarationConflict3.errors.txt
importAndVariableDeclarationConflict3.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importAndVariableDeclarationConflict3.ts(5,8): error TS2300: Duplicate identifier 'x'.
importAndVariableDeclarationConflict3.ts(6,8): error TS2300: Duplicate identifier 'x'.


==== importAndVariableDeclarationConflict3.ts (3 errors) ====
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      export var m = '';
    }
    
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    